Added grid style layout to the website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample ByteFrost Meeting Minutes</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -27,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <hr>
+    <!-- <hr> -->
     <main>
         <section id="attendance">
             <h2>Attendance</h2>
@@ -149,7 +150,7 @@
             </details>
         </section>
     </main>
-    <hr>
+    <!-- <hr> -->
     <footer>
         <h4>Subscribe to the ByteFrost Newsletter</h4>
         <p><i>Our news, sent to you one byte at a time!</i></p>
