Added spacing (padding, margins) and borders

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <h3>Navigation</h3>
-            <ul>
+            <ul id="navigation_list">
                 <li><a href="#attendance">Attendance</a></li>
                 <li><a href="#agenda">Meeting Agenda</a></li>
                 <li><a href="#previous">Previous Meeting Discussion</a></li>
