--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>April 12, 2023</h3>
         </div>
         <nav>
-            <h3>Navigation</h3>
+            <h3 id="nav_title">Navigation</h3>
             <ul id="navigation_list">
                 <li><a href="#attendance">Attendance</a></li>
                 <li><a href="#agenda">Meeting Agenda</a></li>
