Added flex to the navigation list, set positions, and added sizes to logo image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div id="top">
             <h1>Sample (Fake) ByteFrost Meeting Minutes</h1>
-            <img src="ByteFrost_Logo.png" alt="ByteFrost Logo" width="250">
+            <img id="logo" src="ByteFrost_Logo.png" alt="ByteFrost Logo">
             <h2>Brainstorming Move to 16 Bits</h2>
             <h3>April 12, 2023</h3>
         </div>
