Added two Google Fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample ByteFrost Meeting Minutes</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display|Bebas+Neue">
     <link rel="stylesheet" href="style.css">
+    <style>
+        fieldset {
+            background-color: blanchedalmond;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -153,7 +159,7 @@
     </main>
     <!-- <hr> -->
     <footer>
-        <h4>Subscribe to the ByteFrost Newsletter</h4>
+        <h4 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:24px; margin-top: 2vh; margin-bottom: 1vh;">Subscribe to the ByteFrost Newsletter</h4>
         <p><i>Our news, sent to you one byte at a time!</i></p>
         <form>
             <fieldset>
